@@ -3,6 +3,8 @@ Revision history for Selenium-Client
 1.01 2021-02-05 TEODESIAN
     [BUG FIXES]
     - Fix issue with spawning Selenium JARs on Win32
+    [NEW FEATURES]
+    - Add convenience apparatus for building caps & sane defaults (headless=1)
 
 1.00  2021-02-04 TEODESIAN
     - Initial release
